chore: update project structure

--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Pages/Grid.razor
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Pages/Grid.razor
@@ -1,6 +1,6 @@
 ﻿@page "/grid"
 
-@using LE_Digital_2_Blazor_Server_WebApp.Data
+@using LE_Digital_2_Blazor_Server_WebApp.Server.Data
 @inject WeatherForecastService ForecastService
 
 <h2>DevExpress Grid</h2>
