--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Pages/_Layout.cshtml
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Pages/_Layout.cshtml
@@ -21,7 +21,7 @@
     }
     @if(isIEOrEdgeLegacy)
     {
-        <component type="typeof(LE_Digital_2_Blazor_Server_WebApp.Shared.BrowserNotSupported)" render-mode="Static" />
+        <component type="typeof(LE_Digital_2_Blazor_Server_WebApp.Server.Shared.BrowserNotSupported)" render-mode="Static" />
     }
     else
     {
