--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/_Imports.razor
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/_Imports.razor
@@ -7,6 +7,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using LE_Digital_2_Blazor_Server_WebApp
-@using LE_Digital_2_Blazor_Server_WebApp.Shared
-
+@* @using LE_Digital_2_Blazor_Server_WebApp.Shared
+ *@
 @using DevExpress.Blazor
