--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Pages/Controller/EditVPs.razor
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Pages/Controller/EditVPs.razor
@@ -86,7 +86,7 @@ else
             vpAllocations = vpList.Select(vp => new VpParent
                 {
                     VpName = vp.VpName,
-                    VpUser = vp.Responsable,
+                    VpUser = vp.Responsible,
                     TotalInvestment = 0
                 }).ToList();
         }
