--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/_Imports.razor
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/_Imports.razor
@@ -1,5 +1,4 @@
-﻿@using System.Net.Http
-@using Microsoft.AspNetCore.Authorization
+﻿@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -7,6 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using LE_Digital_2_Blazor_Server_WebApp
-@* @using LE_Digital_2_Blazor_Server_WebApp.Shared
- *@
+@using LE_Digital_2_Blazor_Server_WebApp.Server.Shared
+
+@* This using is for the main DevExpress components like the TreeView *@
 @using DevExpress.Blazor
