--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Pages/Controller/ManageVersions.razor
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Pages/Controller/ManageVersions.razor
@@ -1,4 +1,5 @@
 ﻿@page "/controller/manage-versions"
+@page "/"
 @attribute [Authorize(Roles = "Controller, Master")]
 
 @using System.Security.Claims
