--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Shared/NavMenu.razor
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Shared/NavMenu.razor
@@ -1,8 +1,7 @@
 ﻿<div class="sidebar @StateCssClass">
 <DxTreeView AllowSelectNodes="true" CssClass="app-sidebar">
     <Nodes>
-        <DxTreeViewNode NavigateUrl="./" Text="Overview" CssClass="@rootNodeCssClass"></DxTreeViewNode>
-        <DxTreeViewNode NavigateUrl="grid" Text="Grid" CssClass="@rootNodeCssClass"></DxTreeViewNode>
+            <DxTreeViewNode Text="Home" NavigateUrl="controller/manage-versions" IconCssClass="oi oi-home"></DxTreeViewNode>
     </Nodes>
 </DxTreeView>
 </div>
