Login and Create version success

--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Pages/Controller/ManageVersions.razor
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Pages/Controller/ManageVersions.razor
@@ -121,7 +121,8 @@ else
         var impersonatedPrincipal = new ClaimsPrincipal(identity);
 
         AppState.StartImpersonation(impersonatedPrincipal);
-        ((CustomAuthenticationStateProvider)AuthStateProvider).NotifyStateChanged();
+
+        // The old, incorrect line is removed. We navigate instead.
         NavigationManager.NavigateTo("/", forceLoad: true);
     }
 }
