--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Shared/RedirectToLogin.razor
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Shared/RedirectToLogin.razor
@@ -1,8 +1,11 @@
 ﻿@inject NavigationManager NavigationManager
 
 @code {
-    protected override void OnInitialized()
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        NavigationManager.NavigateTo("/login");
+        if (firstRender)
+        {
+            NavigationManager.NavigateTo("/login", forceLoad: true);
+        }
     }
 }
