--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Shared/NavMenu.razor
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Server/Shared/NavMenu.razor
@@ -1,7 +1,12 @@
 ﻿<div class="sidebar @StateCssClass">
 <DxTreeView AllowSelectNodes="true" CssClass="app-sidebar">
     <Nodes>
-            <DxTreeViewNode Text="Home" NavigateUrl="controller/manage-versions" IconCssClass="oi oi-home"></DxTreeViewNode>
+        <DxTreeViewNode Text="Home" NavigateUrl="controller/manage-versions" IconCssClass="oi oi-home"></DxTreeViewNode>
+        <AuthorizeView Roles="Director, Master">
+            <Authorized>
+                <DxTreeViewNode Text="Director Dashboard" NavigateUrl="director/dashboard" IconCssClass="oi oi-briefcase"></DxTreeViewNode>
+            </Authorized>
+        </AuthorizeView>
     </Nodes>
 </DxTreeView>
 </div>
