--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/_Imports.razor
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.JSInterop
 @using LE_Digital_2_Blazor_Server_WebApp
 @using LE_Digital_2_Blazor_Server_WebApp.Server.Shared
+@using LE_Digital_2_Blazor_Server_WebApp.Core.Interfaces
 
 @* This using is for the main DevExpress components like the TreeView *@
 @using DevExpress.Blazor
